# drops

./: .gitattributes  .gitmodules  Make.common  Makefile  README.md  Readme  do-configure-alex.sh  do-configure-local.sh  do-configure-uh.sh  do-configure.sh  drops.conf  sphere.json  torus.json
src/: .gitignore  CMakeLists.txt  CMakeSettings.txt  dox.cfg  drops.conf
src/doc/: Readme.cmake  dropsappendix.tex  dropsnotes.tex
src/epetra/: Epetra_OperatorApply.hpp
src/geom/: CMakeLists.txt  boundary.h  builder.cpp  builder.h  csg-examples.json  csg.cpp  csg.h  deformation.cpp  deformation.h  geomselect.cpp  geomselect.h  geomselect.tpp  isoparamP2.h  locator.cpp  locator.h  maketopo.cpp  multigrid.cpp  multigrid.h  principallattice.h  reftetracut.cpp  reftetracut.h  signtraits.h  simplex.cpp  simplex.h  subtriangulation.cpp  subtriangulation.h  subtriangulation.tpp  topo.cpp  topo.h
src/levelset/: CMakeLists.txt  adaptriang.cpp  adaptriang.h  brick_transp.cpp  brick_transp.json  butanol.json  circFlow.json  couette_err.cpp  coupling.cpp  coupling.h  coupling.tpp  dist_marking_strategy.h  dist_marking_strategy.tpp  eindhoven.json  fastmarch.cpp  fastmarch.h  fastmarch.tpp  film.cpp  film.json  filmCoeff.cpp  levelset.cpp  levelset.h  levelset.tpp  levelsetmapper.cpp  levelsetmapper.h  lsshear.cpp  marangoni.json  marking_strategy.cpp  marking_strategy.h  mgobserve.h  mzelle_hdr.h  mzi.json  newfilm.json  prJump.cpp  prJump.json  prJumpKirchhart.cpp  prJumpKirchhart.json  prJumpMod.cpp  reparam.cpp  risingbutanoldroplet.json  (+15 more)
src/maketools/: convert.py  make_all_baseCMakeLists  make_baseCMakeLists  scrape.py
src/mathematica/: crop.wls  eig.wls  io.wls  rhs.wls
src/misc/: CMakeLists.txt  auto_diff.h  base64.cpp  base64.h  compensight.cpp  container.h  csgFunctions.cpp  dynamicload.cpp  dynamicload.h  funcmap.cpp  funcmap.h  loadlib.cpp  omp_variable.h  params.cpp  params.h  problem.cpp  problem.h  progressaccu.cpp  scalarFunctions.cpp  scopetimer.cpp  scopetimer.h  singletonmap.h  staticinit.h  utils.h
src/navstokes/: CMakeLists.txt  insadrops.cpp  insdrops.cpp  instatnavstokes2phase.cpp  instatnavstokes2phase.h  integrTime.h  navstokes.h  navstokes.tpp  nsdrops.cpp  nsdrops_begehung.cpp
src/num/: CMakeLists.txt  MGsolver.h  MGsolver.tpp  accumulator.h  bndData.cpp  bndData.h  discretize.cpp  discretize.h  discretize.tpp  fe.cpp  fe.h  fe.tpp  fe_repair.h  fe_repair.tpp  functions.hpp  gradient_recovery.cpp  gradient_recovery.h  hypre.cpp  hypre.h  interfacePatch.cpp  interfacePatch.h  interfacePatch.tpp  krylovsolver.h  lattice-eval.h  lattice-eval.tpp  newton.h  nssolver.h  oseenprecond.cpp  oseenprecond.h  oseensolver.cpp  oseensolver.h  oswald_projection.h  pardisosolver.h  parlanczos.h  parlanczos.tpp  poissonsolverfactory.h  precond.h  prolongation.h  prolongation.tpp  quadrature.cpp  (+17 more)
src/osmosis/: CMakeLists.txt  localsetups.cpp  osmosis.cpp  osmosis.json  osmosisCoeff.cpp  osmosisSetup.cpp  osmosisSetup.h  prokertII.json  tests.cpp  torus.json
src/parallel/: CMakeLists.txt  decompose.cpp  decompose.h  decompose.tpp  exchange.cpp  exchange.h  exchange.tpp  loadbal.cpp  loadbal.h  migrateunknowns.cpp  parallel.cpp  parallel.h  parallel.tpp  parmultigrid.cpp  parmultigrid.h  partitioner.h
src/partests/: CMakeLists.txt  TestPoissonPar.cpp  dist_TestRefPar.cpp  dist_exchange.cpp  dist_interface.cpp  dist_interp1.cpp  dist_interp2.cpp  dist_migration.cpp  dist_modify.cpp  dist_ref.cpp  dist_ref_rising_drop.cpp  dist_remotedatatest.cpp  dist_sdropsP2.cpp  dist_sendtetraofbrick.cpp  dist_simplexsend.cpp  dist_streamtest.cpp
src/poisson/: CMakeLists.txt  adjointEx.json  ale.cpp  ale.h  aleEx2.json  aleEx3.json  aleEx4.json  cdrdrops.cpp  convdiffEx.json  instatpoissonEx.json  instatsupgEx.json  integrTime.h  ipdropsAD.cpp  poisson.cpp  poisson.h  poisson.tpp  poissonCoeff.cpp  poissonParam.cpp  poissonParam.h  poissonaccus.tpp  statpoissonEx.json  statsupgEx.json  transport2phase.cpp  transport2phase.h
src/savch/: CMakeLists.txt  savch.cpp
src/savchmtx/: CMakeLists.txt  separation.cpp
src/spacetimetransp/: BotheKoebeWielageWarnecke03.json  CMakeLists.txt  RisingHieu.json  TaylorBubbleMass.json  indicator.cpp  indicator.h  rising_st_mass.json  spacetime_error.cpp  spacetime_error.h  spacetime_setup.cpp  spacetime_setup.h  spacetime_sol.cpp  spacetime_sol.h  st_transp.cpp  sttranspCoeff.cpp  stxfem.cpp  stxfem.h  testcase7.json
src/stokes/: CMakeLists.txt  FSdrops.json  MGsdropsP2.json  drivcav.json  drivcav_instat.json  errorestimator.cpp  instatstokes2phase.cpp  instatstokes2phase.h  instatstokes2phase.tpp  integrTime.cpp  integrTime.h  integrTime2phase.cpp  integrTime2phase.h  sdrops.cpp  sdropsP2.cpp  slipBndOnePhase.cpp  slipBndOnePhase.h  stokes.cpp  stokes.h  stokes.tpp  stokesCoeff.cpp  stokesCoeff.h  stsdrops.json
src/surfactant/: CMakeLists.txt  Surface.hpp  ifacetransp.cpp  ifacetransp.h  ifacetransp.tpp  surfacenorms.cpp  surfacestokes.cpp  surfacestokes_funcs.h  surfacestokes_tests.h  surfacestokes_utils.h  surfactant.cpp  surfactant.json
src/surfnavierstokes/: CMakeLists.txt  Epetra_OperatorApply.hpp  SurfNavierStokesData.hpp  VTKWriter.hpp  benchmark.nb  eig.wls  eig_sub.wls  postprocessor.nb  surfnavierstokes.cpp  surfnavierstokes_funcs.h  surfnavierstokes_tests.h  surfnavierstokes_utils.h
src/surfnsch/: CMakeLists.txt  SurfNSCHData.hpp  surfnsch.cpp
src/surfphasesep/: CMakeLists.txt  SurfCahnHilliardData.hpp  ginzburg_landau_dw_potential.nb  hermite_cubic.cpp  separation.cpp  surfphasesep.cpp  surfphasesep_funcs.h
src/tests/: CMakeLists.txt  base64test.cpp  bicgstab.cpp  blockmat.cpp  bndTrianglePartition.cpp  combiner.cpp  csgtest.cpp  csgtest.json  decocube.json  directsolver.cpp  downwind.cpp  dynload.cpp  extendP1onChild.cpp  f_Gamma.cpp  f_Gamma.json  gcr.cpp  interfaceP1FE.cpp  interfacepatch_doublecut.cpp  interp2.cpp  jacobi.cpp  mass.cpp  mattest.cpp  meshreader.cpp  minres.cpp  neq.cpp  pardiso.cpp  principallattice.cpp  prolongationp2test.cpp  quad5.cpp  quad5_2D.cpp  quad_extra.cpp  quadbase.cpp  reftest.cpp  reparam.json  (+15 more)
(+428 files in other folders)
